<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="5dp"
    tools:context=".view.fragment.TrainingFragment">


    <TextView
        android:id="@+id/textExercicio"
        android:layout_width="wrap_content"
        android:layout_height="25dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="44dp"
        android:text="@string/exercicio"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

    <EditText
        android:id="@+id/inptPeso"
        android:layout_width="240dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/ex_33"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.67"
        app:layout_constraintStart_toEndOf="@+id/textPeso"
        app:layout_constraintTop_toBottomOf="@+id/inptExercicio" />

    <TextView
        android:id="@+id/textPeso"
        android:layout_width="wrap_content"
        android:layout_height="25dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="44dp"
        android:text="@string/peso"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textExercicio" />

    <Button
        android:id="@+id/btn_registrar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="96dp"
        android:text="@string/registrar_exerc_cio"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inptPeso" />

    <TextView
        android:id="@+id/textRegistro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/registro_de_treino"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="387dp"
        android:layout_height="274dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:checkedButton="@id/rdbPeito"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textRegistro">

        <RadioButton
            android:id="@+id/rdbPeito"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/peito"
            android:layout_width="match_parent"/>

        <RadioButton
            android:id="@+id/rdbCosta"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/costas"
            android:layout_width="match_parent"/>

        <RadioButton
            android:id="@+id/rdbPerna"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/perna"
            android:layout_width="match_parent"/>

        <RadioButton
            android:id="@+id/rdbBiceps"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/biceps"
            android:layout_width="match_parent"/>

        <RadioButton
            android:id="@+id/rdbTriceps"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/triceps"
            android:layout_width="match_parent"/>
    </RadioGroup>

    <EditText
        android:id="@+id/inptExercicio"
        android:layout_width="240dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/ex_stiff"
        android:inputType="text"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.39"
        app:layout_constraintStart_toEndOf="@+id/textExercicio"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />


</androidx.constraintlayout.widget.ConstraintLayout>